--- a/Moreno_MP3.html
+++ b/Moreno_MP3.html
@@ -107,7 +107,7 @@
     <!-- Tabella 14 brani -->
     <table>
         <tr><td>1</td><td>Radioactive<br><audio controls src="https://files.catbox.moe/5kk6v2.mp3"></audio></td></tr>
-        <tr><td>2</td><td>Tiptoe<br><audio controls src="https://h.uguu.se/ZdpyfcHZ.MP3"></audio></td></tr>
+        <tr><td>2</td><td>Tiptoe<br><audio controls src="https://d.uguu.se/OqDgULnP.mp3"></audio></td></tr>
         <tr><td>3</td><td>It's Time<br><audio controls src="preview.mp3"></audio></td></tr>
         <tr><td>4</td><td>Demons<br><audio controls src="preview.mp3"></audio></td></tr>
         <tr><td>5</td><td>On Top of the World<br><audio controls src="preview.mp3"></audio></td></tr>
