--- a/Moreno_MP3.html
+++ b/Moreno_MP3.html
@@ -106,20 +106,32 @@
 
     <!-- Tabella 14 brani -->
     <table>
-        <tr><td>1</td><td>Radioactive<br><audio controls src="https://fileditchfiles.me/file.php?f=/b75/SdyajzlRWIlSAHKIAKAz.mp3"></audio></td></tr>
-        <tr><td>2</td><td>Tiptoe<br><audio controls src="https://d.uguu.se/OqDgULnP.mp3"></audio></td></tr>
-        <tr><td>3</td><td>It's Time<br><audio controls src="preview.mp3"></audio></td></tr>
-        <tr><td>4</td><td>Demons<br><audio controls src="preview.mp3"></audio></td></tr>
-        <tr><td>5</td><td>On Top of the World<br><audio controls src="preview.mp3"></audio></td></tr>
-        <tr><td>6</td><td>Amsterdam<br><audio controls src="preview.mp3"></audio></td></tr>
-        <tr><td>7</td><td>Hear Me<br><audio controls src="preview.mp3"></audio></td></tr>
-        <tr><td>8</td><td>Every Night<br><audio controls src="preview.mp3"></audio></td></tr>
-        <tr><td>9</td><td>Bleeding Out<br><audio controls src="preview.mp3"></audio></td></tr>
-        <tr><td>10</td><td>Underdog<br><audio controls src="preview.mp3"></audio></td></tr>
-        <tr><td>11</td><td>Nothing Left to Say<br><audio controls src="preview.mp3"></audio></td></tr>
-        <tr><td>12</td><td>Rocks<br><audio controls src="preview.mp3"></audio></td></tr>
-        <tr><td>13</td><td>Working Man<br><audio controls src="preview.mp3"></audio></td></tr>
-        <tr><td>14</td><td>Fallen<br><audio controls src="preview.mp3"></audio></td></tr>
+        <tr><td>1</td><td>Radioactive<br><audio controls src="https://github.com/MatiasMoreno22/audiopreview/raw/refs/heads/main/Imagine%20Dragons%20-%20Radioactive%20(Lyric%20Video)-%5BAudioTrimmer.com%5D%20(1).mp3
+"></audio></td></tr>
+        <tr><td>2</td><td>Tiptoe<br><audio controls src="https://github.com/MatiasMoreno22/audiopreview/raw/refs/heads/main/Imagine%20Dragons%20-%20Tiptoe%20(Lyric%20Video)-%5BAudioTrimmer.com%5D%20(1).mp3
+"></audio></td></tr>
+        <tr><td>3</td><td>It's Time<br><audio controls src="https://github.com/MatiasMoreno22/audiopreview/raw/refs/heads/main/Imagine%20Dragons%20-%20It's%20Time%20(Official%20Music%20Video)-%5BAudioTrimmer.com%5D.mp3
+"></audio></td></tr>
+        <tr><td>4</td><td>Demons<br><audio controls src="https://github.com/MatiasMoreno22/audiopreview/raw/refs/heads/main/Imagine%20Dragons%20-%20Demons%20(Official%20Music%20Video)-%5BAudioTrimmer.com%5D%20(1).mp3"></audio></td></tr>
+        <tr><td>5</td><td>On Top of the World<br><audio controls src="https://github.com/MatiasMoreno22/audiopreview/raw/refs/heads/main/Imagine%20Dragons%20-%20On%20Top%20Of%20The%20World%20(Official%20Music%20Video)-%5BAudioTrimmer.com%5D.mp3
+"></audio></td></tr>
+        <tr><td>6</td><td>Amsterdam<br><audio controls src="https://github.com/MatiasMoreno22/audiopreview/raw/refs/heads/main/Imagine%20Dragons%20-%20Amsterdam%20(Lyric%20Video)-%5BAudioTrimmer.com%5D.mp3
+"></audio></td></tr>
+        <tr><td>7</td><td>Hear Me<br><audio controls src="https://github.com/MatiasMoreno22/audiopreview/raw/refs/heads/main/Imagine%20Dragons%20-%20Hear%20Me%20(Lyric%20Video)-%5BAudioTrimmer.com%5D.mp3
+"></audio></td></tr>
+        <tr><td>8</td><td>Every Night<br><audio controls src="https://github.com/MatiasMoreno22/audiopreview/raw/refs/heads/main/Imagine%20Dragons%20-%20Every%20Night%20(Lyric%20Video)-%5BAudioTrimmer.com%5D.mp3
+"></audio></td></tr>
+        <tr><td>9</td><td>Bleeding Out<br><audio controls src="https://github.com/MatiasMoreno22/audiopreview/raw/refs/heads/main/Imagine%20Dragons%20-%20Bleeding%20Out%20%20Lyrics%20%20sub%20espa%C3%B1ol-%5BAudioTrimmer.com%5D.mp3
+"></audio></td></tr>
+        <tr><td>10</td><td>Underdog<br><audio controls src="https://github.com/MatiasMoreno22/audiopreview/raw/refs/heads/main/Imagine%20Dragons%20-%20Underdog%20(Lyric%20Video)-%5BAudioTrimmer.com%5D.mp3
+"></audio></td></tr>
+        <tr><td>11</td><td>Nothing Left to Say<br><audio controls src="https://github.com/MatiasMoreno22/audiopreview/raw/refs/heads/main/Imagine%20Dragons%20-%20Nothing%20Left%20To%20Say%20(Art%20Film)-%5BAudioTrimmer.com%5D.mp3
+"></audio></td></tr>
+        <tr><td>12</td><td>Rocks<br><audio controls src="https://github.com/MatiasMoreno22/audiopreview/raw/refs/heads/main/Imagine%20Dragons%20-%20Nothing%20Left%20To%20Say%20%20Rocks%20(Medley%20%20Lyric%20Video)-%5BAudioTrimmer.com%5D.mp3
+"></audio></td></tr>
+        <tr><td>13</td><td>Working Man<br><audio controls src="https://github.com/MatiasMoreno22/audiopreview/raw/refs/heads/main/Imagine%20Dragons%20-%20Working%20Man%20(Lyric%20Video)-%5BAudioTrimmer.com%5D.mp3
+"></audio></td></tr>
+        <tr><td>14</td><td>Fallen<br><audio controls src="https://github.com/MatiasMoreno22/audiopreview/raw/refs/heads/main/Imagine%20Dragons%20-%20Fallen%20(Lyric%20Video)-%5BAudioTrimmer.com%5D.mp3"></audio></td></tr>
     </table>
 
     <!-- Form di acquisto -->
